# configurator

./: .clang-format  .gitignore  CMakeLists.txt  README
resources/: favicon.qrc
scripts/: config.json  semver.py  version_template.h
src/: communication_front.cpp  communication_front.h  communication_window.cpp  communication_window.h  control_window.cpp  control_window.h  icommunication.cpp  icommunication.h  main.cpp  mainwindow.cpp  mainwindow.h  pelcod_protocol.cpp  pelcod_protocol.h  serial_com.cpp  serial_com.h  serial_info.cpp  serial_info.h  setting_window.cpp  setting_window.h  tcp_com.cpp  tcp_com.h  udp_com.cpp  udp_com.h
